Fix video aspect ratio on mobile

--- a/src/components/dev/dev.css
+++ b/src/components/dev/dev.css
@@ -59,6 +59,8 @@
 .playback {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
+  max-height: 600px;
 }
 
 .staph-vid {
